# axum-tokio-postgres

./: .env  Cargo.toml  README.md
assets/: app.js
axum_tokio_postgres/: Cargo.toml
axum_tokio_postgres/assets/: styles.css
axum_tokio_postgres/db/migrations/: 001_table.sql
axum_tokio_postgres/src/: api.rs  controller.rs  main.rs
axum_tokio_postgres/src/api/: task.rs
axum_tokio_postgres/src/controller/: task.rs
axum_tokio_postgres/templates/: list.stpl
db/migrations/: setup.sql
src/: main.rs
src/api/: mod.rs
src/controller/: mod.rs  task.rs
templates/: home.stpl  index.stpl
