[package]
name = "axum_tokio_postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version="0.7", features = ["with-serde_json-1", "with-chrono-0_4"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde"] }
dotenv = "0.15"
chrono = "0.4.38"
